syntax = 'proto3';

package rpcdump;

option go_package = "github.com/hyperledger/burrow/rpc/rpcdump";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "dump.proto";

option (gogoproto.stable_marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;

service Dump {
    rpc GetDump(GetDumpParam) returns (stream dump.Dump);
}

message GetDumpParam {
    uint64 height = 1;
}
